--- a/src/main/resources/static/html/converted_html_files/delInfo.html
+++ b/src/main/resources/static/html/converted_html_files/delInfo.html
@@ -14,7 +14,7 @@
     <script>
         // DOMContentLoaded 이벤트 리스너를 사용하여 DOM이 완전히 로드된 후에 실행되도록 설정
         $(document).ready(function () {
-            const SS_USER_ID = "<%= (String) session.getAttribute("SS_USER_ID") %>"
+            // const SS_USER_ID = "<%= (String) session.getAttribute("SS_USER_ID") %>"
 
             if (SS_USER_ID && SS_USER_ID.trim() !== "null") {
                 document.getElementById("loginNav").style.display = "none";
